--- a/render.yaml
+++ b/render.yaml
@@ -2,11 +2,11 @@ services:
   - type: web
     name: claimguard-ai
     env: python
-    buildCommand: pip install --upgrade pip && pip install -r requirements.txt
+    buildCommand: python --version && pip install --upgrade pip && pip install -r requirements.txt
     startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: GEMINI_KEY
         sync: false
       - key: PYTHON_VERSION
-        value: 3.9.18
+        value: 3.11.9
 
